[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Map/Tileset/crop plantação.png" type="Texture" id=1]
[ext_resource path="res://assets/Plants/guaraná png5.png" type="Texture" id=2]
[ext_resource path="res://assets/Plants/abóbora1[.png" type="Texture" id=3]
[ext_resource path="res://assets/Plants/abóbora2.png" type="Texture" id=4]
[ext_resource path="res://assets/Plants/abóbora3.png" type="Texture" id=5]
[ext_resource path="res://assets/Plants/abóbora4.png" type="Texture" id=6]
[ext_resource path="res://assets/Plants/abóbora pn5.png" type="Texture" id=7]
[ext_resource path="res://assets/Plants/guaraná png2.png" type="Texture" id=8]
[ext_resource path="res://assets/Plants/guaraná png3.png" type="Texture" id=9]
[ext_resource path="res://assets/Plants/guaraná png1.png" type="Texture" id=10]
[ext_resource path="res://assets/Plants/guaraná png4.png" type="Texture" id=11]
[ext_resource path="res://scripts/area da plantação.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 20 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "abobora fases",
"speed": 0.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 2 ) ],
"loop": true,
"name": "guarana fases",
"speed": 0.0
}, {
"frames": [  ],
"loop": true,
"name": "vazio",
"speed": 0.0
} ]

[node name="area da plantação" type="StaticBody2D"]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 8, 0 )
shape = SubResource( 1 )

[node name="plant" type="AnimatedSprite" parent="."]
position = Vector2( -5, -12 )
frames = SubResource( 2 )
animation = "vazio"

[node name="aboboratimer" type="Timer" parent="."]
wait_time = 5.0

[node name="guaranatimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="aboboratimer" to="." method="_on_aboboratimer_timeout"]
[connection signal="timeout" from="guaranatimer" to="." method="_on_guaranatimer_timeout"]
